<resources>
    <string name="app_name">TV Remote</string>
    <string name="volup">+</string>
    <string name="left">left</string>
    <string name="down">down</string>
    <string name="ok">ok</string>
    <string name="power">power</string>
    <string name="menu">menu</string>
    <string name="source">source</string>
    <string name="mute">mute</string>
    <string name="up">up</string>
    <string name="right">right</string>
    <string name="voldn">-</string>
    <string name="reboot">reboot</string>
</resources>
