<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/volup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/volup"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/mute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/voldn" />

    <Button
        android:id="@+id/voldn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/voldn"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/mute"
        app:layout_constraintEnd_toStartOf="@+id/volup"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/up"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:text="@string/up"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ok"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/ok"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/voldn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <Button
        android:id="@+id/right"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/right"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/volup"
        app:layout_constraintStart_toEndOf="@+id/ok"
        app:layout_constraintTop_toBottomOf="@+id/src" />

    <Button
        android:id="@+id/down"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:text="@string/down"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ok" />

    <Button
        android:id="@+id/left"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/left"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/voldn"
        app:layout_constraintEnd_toStartOf="@+id/ok"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <Button
        android:id="@+id/menu"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/menu"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/src"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwr" />

    <Button
        android:id="@+id/mute"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/mute"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/reboot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/src"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/source"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/pwr" />

    <Button
        android:id="@+id/pwr"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:backgroundTint="#BD1C1C"
        android:text="@string/power"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reboot"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="#BD1C1C"
        android:text="@string/reboot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>